<resources>
    <string name="app_name">iShare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">HomePage</string>

    <string name="thankyou_donation">Thank you for donation</string>

    <string name="google_api_key">AIzaSyC-yNXRZTkMBzAQ8A_gNfTzi1tTGRYitgM</string>

    <string name="accept_as_volunteer">I wolud like to volunteer for delivering food and receive notifications about food donation</string>

    <string name="select_available_donation_message">Please select the location from where you would like to pick up the food</string>

    <string name="select_available_delivery_message">Please select the location where you want to deliver the foods from the list of charities below</string>

    <string name="donate_food">Excess Spot</string>
    <string name="volunteer">Volunteer</string>
    <string name="map_a_location">Hunger Spot</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="about_us">iShare is a non-profitable organization runs by volunteers to share surplus things to the less fortunate people.
        Through the act we can reduce poverty index and number of children and aged people lives, who dies daily in hunger..</string>

    <!--<string name="banner_msg">Our goal is to Stop Food Wastage!</string>-->
    <string name="banner_msg">     Feed the Needy! </string>

    <string name="valid_name">Please enter valid name</string>
    <string name="valid_mobile">Please enter valid mobile number</string>

    <string name="alert_msg">Are you sure about the pickup location and delivery location?</string>

    <string name="unable_to_connect">Unable to get data.Please try again</string>

    <string name="thnxvolunter">Thank you for being part of our volunteers to deliver the food </string>
    <string name="thnxdonator">Your food donation has been accepted and our volunteer will pick it up shortly.</string>
    <string name="txtvolunter_Details">Arun \n 8056371394</string>
    <string name="txtDonation_Details">Adhiyamaan College,\n ,Hosur.</string>
    <string name="Delivery_location">Hosur</string>

    <string name="thankyou_volunteer">Your request to collect the foods from the donor is accepted.The details of the pick up and delivery locations are given bellow</string>

    <string name="thankyou_map_location">Thank you for sharing the location of needy people.we will verify it and update.</string>

</resources>
