<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />


    <LinearLayout
        android:id="@+id/mylayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/name"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mylayout"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dearUser"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="Dear User"
            android:typeface="serif"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/thnxdonater"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/thnxvolunter"
            android:typeface="serif"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="Regards"
            android:typeface="serif"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="iShare Team"
            android:typeface="serif"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="Donation Details"
            android:typeface="serif"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtDonation_Details"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/txtDonation_Details"
            android:typeface="serif"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="Delivery location"
            android:typeface="serif"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtDelevery_location"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/Delivery_location"
            android:typeface="serif"/>
    </LinearLayout>

</RelativeLayout>