<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/include_toolbar" />
    <include layout="@layout/slider"/>
          <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="10dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="150pt"
            android:layout_height="65dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            card_view:cardBackgroundColor="#ccc"
            card_view:cardCornerRadius="3dp"
            android:elevation="5dp"
            card_view:cardUseCompatPadding="true">
            <RelativeLayout
                android:id="@+id/layout_donate_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/view_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/donate_food"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:typeface="serif"
                    />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150pt"
            android:layout_height="65dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            card_view:cardBackgroundColor="#ccc"
            card_view:cardCornerRadius="3dp"
            android:elevation="5dp"
            card_view:cardUseCompatPadding="true">
            <RelativeLayout
                android:id="@+id/layout_map_a_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/view_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/map_a_location"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:typeface="serif"
                    />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
              <android.support.v7.widget.CardView
                  android:layout_width="150pt"
                  android:layout_height="65dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginTop="5dp"
                  card_view:cardBackgroundColor="#ccc"
                  card_view:cardCornerRadius="3dp"
                  android:elevation="5dp"
                  card_view:cardUseCompatPadding="true">
                  <RelativeLayout
                      android:id="@+id/about"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:background="@drawable/view_bg">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true"
                          android:text="@string/about"
                          android:textColor="#fff"
                          android:textSize="25sp"
                          android:typeface="serif"
                          />
                  </RelativeLayout>

              </android.support.v7.widget.CardView>
              <android.support.v7.widget.CardView
                  android:layout_width="150pt"
                  android:layout_height="65dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginTop="5dp"
                  card_view:cardBackgroundColor="#ccc"
                  card_view:cardCornerRadius="3dp"
                  android:elevation="5dp"
                  card_view:cardUseCompatPadding="true">
                  <RelativeLayout
                      android:id="@+id/contact"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:background="@drawable/view_bg">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true"
                          android:text="@string/contact"
                          android:textColor="#fff"
                          android:textSize="25sp"
                          android:typeface="serif"
                          />
                  </RelativeLayout>

              </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
